--- a/style/style.css
+++ b/style/style.css
@@ -1,55 +1,169 @@
 
-nav
+header nav
 {
-    background-color: rgb(159, 159, 228);
-    padding: 5px;
+    background-color: rgb(205, 228, 243);
+    padding: 0.25em;
+    grid-area: nav;
 }
-nav ul
+header nav ul
 {
     text-align: center;
     font-size: 1.2em;
 }
-nav ul li
+header nav ul li
 {
     list-style-type:none;
-    background-color: yellow;
     display: inline;/*horizontal display*/
-    padding: 15px;
-    margin: 5px;
+    background-color: yellow;
+    padding: 0.75em;
+    margin: 0.25em;
     border: 2px; 
     border-style: solid;
     border-color: blue;
-    border-radius: 10px;
+    border-radius: 0.5em;
 }
-nav ul li:hover
+header nav ul li:hover
 {
-    background-color: darkgrey;
+    background-color: rgb(172, 168, 168);
 }
-nav ul li a
+header nav ul li a
 {
     color:black;
     text-decoration: none;
 }
 header
 {
-    background-color: blue;
+    background-color:rgb(145, 201, 247);
     padding: 10px;
+
+    display:grid;
+    grid-template-columns: auto 1fr;
+    grid-template-areas: 
+    "logo title"
+    "nav nav";
+    grid-gap:10px;
+
+    border: 0.1em; 
+    border-style: solid;
+    border-color:black;
+    border-radius: 0.5em;
 }
-footer
-{
-    padding: 10px;
-    background-color: black;
+header h1{
+  font-size: 5em;
+  margin:0;
+  margin-left:0.5em;
+  grid-area: title;
 }
-footer p
-{
-    text-align: center;
-    color: white;
+.logoImg{
+  grid-area: logo;
+  margin-left:3em;
+  border: 0.2em; 
+  border-style: solid;
+  border-color:black;
+  border-radius: 0.5em;
+}
+#header{
+  padding: 10px;
+  background-color: transparent;
+  border: 0.1em; 
+  border-style: solid;
+  border-color:transparent;
+  border-radius: 0.5em;
+}
+footer {
+  background-color: rgb(250, 250, 101);
+  padding: 20px;
+  clear: both;
+}
+
+.footer-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.footer-table td {
+  vertical-align: top;
+  padding: 10px;
+}
+
+.footer-table img {
+  max-width: 100%;
+  height: auto;
+}
+
+.footer-table p {
+  font-size: 14px;
+  margin: 0;
+}
+
+.footer-table h3 {
+  margin: 0 0 10px;
+}
+
+.social-media {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.social-media li {
+  display: inline-block;
+  margin-right: 10px;
+}
+footer img{
+    max-width: 3em;
+    max-height: 3em;
+}
+footer nav ol{
+  margin: 0;
+  padding: 0;
+}
+
+footer nav ol li{
+  display:block;
+  margin-right: 20px;
+  margin-bottom: 0.5em;
+  border: 0.2em; 
+  border-style: solid;
+  border-color:blue;
+  border-radius: 0.5em;
+  text-align: center;
+}
+footer nav ol li:hover{
+    background-color: rgb(145, 201, 247);
+}
+footer nav ol li a{
+  color: #333;
+  text-decoration: none;
+  font-size: 16px;
+
 }
 
 body
 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-
+}
+main{
+  width: 60%;
+  padding: 0.5em;
+  margin: 0.5em;
+  float: left;
+  background-color: white;
+  border: 0.1em; 
+  border-style: solid;
+  border-color: black;
+  border-radius: 0.5em;
+}
+aside {
+  width: 30%;
+  padding: 0.5em;
+  margin: 0.5em;
+  float: right;
+  background-color: rgb(252, 252, 182);
+  border: 0.1em; 
+  border-style: solid;
+  border-color:black;
+  border-radius: 0.5em;
 }
 /* Three image containers (use 25% for four, and 50% for two, etc) */
 .column {
@@ -75,7 +189,9 @@ body
     border: 1px;
     border-color: #000000;
     border-style: solid;
-    margin:100px; 
+    margin:50px; 
+    max-height: 300px;
+    overflow: auto;
   }
   .center {
     display: block;
@@ -83,13 +199,47 @@ body
     margin-right: auto;
     width: 25%;
   }
+  .center-image{
+    margin-left: 35%;
+    margin-right: 65%;
+  }
   .textCenter{
     text-align: center;
   }
   .col_detail{
     column-count: 3;
-    column-rule: 2px solid purple;
+    column-rule: 2px solid blue;
     column-gap: 50px;
     padding: 2px;
     text-align: justify;
+}
+.formHeader{
+  font-style: italic;
+  text-align: center;
+  font-weight: bold;
+  font-size: 2em;
+  color: black;
+  border: 0.2em; 
+  border-style: solid;
+  border-color:black;
+  border-radius: 0.5em;
+  background-color: yellow;
+}
+.required{
+  font-weight:bold ;
+  color:red;
+}
+.border{
+  border: 0.2em; 
+  border-style: solid;
+  border-color:transparent;
+  border-radius: 0.5em;
+}
+.videoContent{
+  float:right;
+  width:49%;
+  border:2px solid black;
+  max-height:450px;
+  min-height:450px;
+  overflow:auto;
 }
